--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,21 @@
 /* You can add global styles to this file, and also import other style files */
+
+@font-face {
+	font-family: 'Tisza Sans';
+	src: url('/assets/DKg8PzuRXqfCbl7PpSZf19jeX4.woff2') format('woff2');
+	font-weight: 400;
+	font-style: normal;
+	font-display: swap;
+}
+
+@font-face {
+	font-family: 'Tisza Sans';
+	src: url('/assets/HsVDMisU0uwbbP0exXU5MsN4W0U.woff2') format('woff2');
+	font-weight: 700;
+	font-style: normal;
+	font-display: swap;
+}
+
+body {
+	font-family: 'Tisza Sans', Arial, sans-serif;
+}
