--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -20,8 +20,7 @@
 			<section class="link-col">
 				<h3>Oldalak</h3>
 				<a routerLink="/">Főoldal</a>
-				<a routerLink="/promises">Ígéretek</a>
-				<a routerLink="/stats">Statisztika</a>
+				<a routerLink="/stats">Ígéretek</a>
 				<a routerLink="/election">Választás</a>
 			</section>
 		</div>
@@ -31,7 +30,7 @@
 		<div class="container bottom-row">
 			
 			<nav aria-label="Jogi linkek" class="legal-links">
-				<a href="https://net4yard.com" target="_blank" rel="noopener noreferrer">Net4Yard </a><p> - Valóra váltjuk a lehetetlent</p>
+				<a href="https://net4yard.com" target="_blank" rel="noopener noreferrer">Net4Yard  </a><p> - Valóra váltjuk a lehetetlent</p>
 			</nav>
 		</div>
 	</div>
