--- a/src/app/stats/stats.component.html
+++ b/src/app/stats/stats.component.html
@@ -1,5 +1,8 @@
 <section class="stats-page" aria-label="Program célok statisztikája">
-	<h1>Programkövető statisztika</h1>
+	<h1>Program és vállalások</h1>
+	<p class="lead">
+		A teljes program PDF tartalomjegyzéke alapján 4 fő témába rendezve láthatók az egyes célok.
+	</p>
 
 	<div class="counter-card">
 		<p>Teljesülés</p>
