--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,4 +18,26 @@
 
 body {
 	font-family: 'Tisza Sans', Arial, sans-serif;
+	margin: 0;
+}
+
+* {
+	scrollbar-width: thin;
+	scrollbar-color: #080c21 transparent;
+}
+
+*::-webkit-scrollbar {
+	width: 12px;
+	height: 12px;
+}
+
+*::-webkit-scrollbar-track {
+	background: transparent;
+}
+
+*::-webkit-scrollbar-thumb {
+	background-color: #080c21;
+	border-radius: 999px;
+	border: 3px solid transparent;
+	background-clip: content-box;
 }
